Fixed navbar icon positions on mobile. (#99)

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -66,3 +66,9 @@ div.g-recaptcha.g-recaptcha-disabled {
     column-count: 2;
   }
 }
+
+.nav-item {
+  i.fas, i.fab {
+    width: 15px;
+  }
+}
